--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,8 @@
         <h2>{{ site.description }}</h2>
 
         <section id="downloads">
-          <a href="mailto:{{ site.email }}" class="btn">Email Me</a>
-          <a href="https://github.com/{{ site.github_username }}" class="btn">GitHub</a>
+          <a href="mailto:nyc@yuchengng.com" class="btn">email me</a>
+          <a href="https://github.com/lucasnyc" class="btn">GitHub</a>
         </section>
       </div>
     </header>
