--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' | relative_url }}" media="print" type="text/css">
-    <link rel="icon" type="image/png" href="{{ '/favicon.png' | relative_url }}">
+    <link rel="icon" type="image/png" href="{{ 'assets/images/favicon.png' | relative_url }}">
     {% seo %}
     
     <style>
@@ -30,6 +30,12 @@
 
   <body>
     {% if page.url == "/" %}
+      <title>{{ site.title }}</title>
+    {% else %}
+      <title>{{ page.title }} | {{ site.title }}</title>
+    {% endif %}
+
+    {% seo title=false %}
     <header>
       <div class="container">
         <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
