--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" media="screen" type="text/css">
     <link rel="stylesheet" href="{{ '/assets/css/print.css' | relative_url }}" media="print" type="text/css">
     <link rel="icon" type="image/png" href="{{ 'assets/images/favicon.png' | relative_url }}">
-    {% seo %}
+    {% if page.url == "/" %}
+      <title>{{ site.title }}</title>
+    {% else %}
+      <title>{{ page.title }}</title>
+    {% endif %}
+
+    {% seo title=false %}
     
     <style>
       header h1 a {
@@ -30,12 +36,6 @@
 
   <body>
     {% if page.url == "/" %}
-      <title>{{ site.title }}</title>
-    {% else %}
-      <title>{{ page.title }} | {{ site.title }}</title>
-    {% endif %}
-
-    {% seo title=false %}
     <header>
       <div class="container">
         <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
