--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,10 @@
     {% seo title=false %}
     
     <style>
+      header h1::before {
+        content: "$ " !important;
+      }
+
       header h1 a {
         text-decoration: none !important;
         border: none !important;
